default.css
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito:wght@300&family=Open+Sans+Condensed:wght@300&family=Rampart+One&display=swap");

#title {
  text-align: center;
  font-size: 50px;
  font-family: "Rampart One", Arial;
  font-weight: normal;
  /* box-shadow: 0px 5px 5px; */
  /* filter: drop-shadow(0px 20px 2px black); */
}

#description {
  text-align: center;
  font-size: 18px;
  margin-left: 15%;
  margin-right: 15%;
  margin-bottom: 5%;
  font-family: "Nunito", Arial;
}

.texts-table {
  width: 80vw;
  align-content: center;
}

#text-addy {
  display: block;
  aspect-ratio: 2.78 / 1;
  width: 20vw;
  margin-left: 10vw;
}

#text-byob {
  display: block;
  aspect-ratio: 2.16 / 1;
  width: 20vw;
}

#text-friends {
  display: block;
  aspect-ratio: 4.12 / 1;
  width: 20vw;
}

#text-vibe {
  display: block;
  aspect-ratio: 4.27 / 1;
  width: 20vw;
  margin-right: 10vw;
}

.table-labels {
  font-family: "Nunito", Arial;
  font-size: 14px;
}

#byob-options {
  font-family: "Nunito", Arial;
  font-size: 14px;
  border-radius: 5px;
}

#vibe-options {
  font-family: "Nunito", Arial;
  font-size: 14px;
  border-radius: 5px;
}

#invite-options {
  font-family: "Nunito", Arial;
  font-size: 14px;
  border-radius: 5px;
}

#preview-table {
  font-family: "Nunito", Arial;
  font-size: 14px;
}

#preview-text {
  font-family: "Nunito", Arial;
  font-size: 14px;
}

input[type="text"] {
  font-family: "Nunito", Arial;
  font-size: 14px;
}

